# AutonomusRacing2024

./: LICENSE  README.md
base_ws/src/control/src/catkin_virtualenv/: setup.cfg
base_ws/src/control/src/gpsimu/: CMakeLists.txt  package.xml
base_ws/src/lidar/Light_signal/: Light_signal.py  Light_signal_trigger.py
base_ws/src/lidar/aonehorn_detection/: CMakeLists.txt  package.xml
base_ws/src/lidar/aonehorn_detection/include/common/: publisher.hpp  publisherbackup.hpp
base_ws/src/lidar/aonehorn_detection/launch/: cone_detector.launch
base_ws/src/lidar/aonehorn_detection/src/: cone_detection.cpp  segmap.cpp  segmap_global.cpp
base_ws/src/lidar/custom_msg/: CMakeLists.txt
base_ws/src/lidar/erp_driver/scripts/: 07.15_labacone_controller.py  gpsimu_parser.py  labacon_controller.py  labacone_controller_demo2-2.py
base_ws/src/lidar/examples/launch/: lidar_final.launch  lidar_final_1031_bb.launch  lidar_pre.launch
base_ws/src/lidar/examples/rviz/: lidar_final_rviz.rviz  uturn.rviz
base_ws/src/lidar/examples/scripts/: forparking.py  path_plan_tunnel.py  qwads0810_0825.py  sung_parking.py  uturn_final_0810_1006.py  uturn_final_0812_2037_rrt.py  uturn_final_0813_0846.py  uturn_final_0815_1331.py  uturn_final_0815_1331_backup.py  uturn_final_0828_1602_2212_26_.py  uturn_final_0830_1602_2212_26.py  uturn_final_0830_1602_2212_26_V2.py  uturn_final_0916_sunggong2.py  uturn_final_0916_sunggong2_1020_save.py  uturn_final_0916_sunggong2_bb.py  (+3 more)
base_ws/src/vision/cits_logger/: CMakeLists.txt  package.xml
base_ws/src/vision/yolov7_ros/: package.xml
(+784 files in other folders)
